# WSChat

./: Procfile  README.md  requirements.txt
authorization/: backends.py  mixins.py
backend/: .gitignore  Dockerfile  README.rst  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
backend/authorization/: admin.py  forms.py  middleware.py  middlewares.py  models.py  serializers.py  urls.py  views.py
backend/authorization/migrations/: 0001_initial.py
backend/authorization/templates/auth/: login.html
backend/chat/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_auto_20211205_1822.py
backend/chat/templates/chat/: welcome.html
backend/server/: api_urls.py  asgi.py  settings.py  urls.py
chat/: admin.py  consumers.py  urls.py  views.py
chat/templates/chat/: welcome.html
frontend/: .eslintrc.js  .gitignore  Procfile  README.md  build.sh  index.html  package-lock.json  package.json
frontend/config/: dev.env.js
frontend/src/: App.vue  config.js  main.js
frontend/src/components/: ChatBox.vue  Header.vue  Message.vue
frontend/src/pages/: ChatRoom.vue  Login.vue  Profile.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/services/: auth.js  axios.js  chat.js  index.js  profile.js
mobile/: App.js  app.json  config.js  package-lock.json  package.json
mobile/ components/: MessageTile.jsx
mobile/services/: auth.js  axios.js  chat.js  index.js  message.js
mobile/views/: Chat.jsx  Login.jsx
server/: asgi.py  settings.py
(+3 files in other folders)
